Added "last_job_date" route. Api description fixes
